kubernetes/apps/radarr/03-radarr-statefullset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
spec:
  serviceName: "radarr-headless"
  replicas: 2
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: linuxserver/radarr:preview
        ports:
        - containerPort: 7878
          name: web
        volumeMounts:
        - name: nfs-radarr-config
          mountPath: /config
      volumes:
      - name: nfs-radarr-config
        persistentVolumeClaim:
          claimName: radarr-config
      restartPolicy: Always
