kubernetes/apps/radarr/01-radarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-service
  labels:
    app: radarr
spec:
  ports:
  - port: 7878
    name: web
  selector:
    app: radarr
