kubernetes/apps/radarr/02-radarr-service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-headless
  labels:
    app: radarr
spec:
  ports:
  - port: 7878
    name: web
  clusterIP: None
  selector:
    app: radarr
